fix back button styles on mobile view

--- a/src/app/features/profile/pages/review-profile/review-profile.component.scss
+++ b/src/app/features/profile/pages/review-profile/review-profile.component.scss
@@ -14,6 +14,10 @@
     grid-row-gap: 16px;
     padding: 0 20px;
 
+    @include media-xs {
+        grid-template-columns: 100%;
+    }
+
     app-user-avatar {
         width: 160px;
         height: 160px;
@@ -22,9 +26,6 @@
         @include media-sm {
             width: 80px;
             height: 80px;
-        }
-        @include media-xs {
-            grid-column: 1 / 3;
             justify-self: center;
         }
     }
@@ -34,7 +35,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 8px;
-    
+
     @include media-xs {
         text-align: center;
     }
@@ -60,9 +61,9 @@
     column-gap: 16px;
     grid-column: 1 / 3;
 
-    @media screen and (max-width: 400px) {
-        flex-direction: column;
-        row-gap: 16px;
+    @include media-xs {
+        grid-column: unset;
+        justify-content: center;
     }
 }
 
